fix margin on login button on tablet

--- a/frontend/src/components/navbar/navbar.less
+++ b/frontend/src/components/navbar/navbar.less
@@ -215,7 +215,7 @@ body {
 
   @media (min-width: 767px) {
     .navbar-nav-squirrel {
-       margin-top: 0px;
+      /*margin-top: 0px;*/
     }
     .navbar-nav-squirrel.navbar-right:last-child {
       margin-right: 10px !important;
